Update spacing in index.html
Replaced underscores with empty spans for spacing.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <span>I</span>
         <span>C</span>
         <span>K</span>
-        <span>_</span>
+        <span> </span>
         <span>M</span>
         <span>O</span>
-        <span>_</span>
+        <span> </span>
         <span>T</span>
         <span>O</span>
-        <span>_</span>
+        <span> </span>
         <span>M</span>
         <span>Y</span>
-        <span>_</span>
+        <span> </span>
         <span>S</span>
         <span>U</span>
         <span>R</span>
@@ -34,11 +34,11 @@
         <span>I</span>
         <span>S</span>
         <span>E</span>
-        <span>_</span>
+        <span> </span>
         <span>A</span>
         <span>K</span>
         <span>O</span>
-        <span>:</span>
+        <span></span>
         <span>&#x1F618;</span>
     </div>
     <div class="description">
